--- a/client/package.json
+++ b/client/package.json
@@ -21,8 +21,7 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
-    "@ngrx/core": "^1.2.0",
-    "@ngrx/store": "^2.2.3",
+    "@ngrx/store": "^4.1.1",
     "angular2-jwt": "^0.2.3",
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
@@ -30,6 +29,7 @@
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.2",
     "socket.io": "^2.0.4",
+    "typescript": "^2.6.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
