--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "multer": "^1.3.0",
     "multer-s3": "2.7.0",
     "socket.io": "^2.0.4"
+  },
+  "devDependencies": {
+    "dotenv": "5.0.1"
   }
 }
